# cexpchess

./: .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: flags.cmake  packages.cmake
src/: CMakeLists.txt  Game.hpp  Main.cpp
tests/: CMakeLists.txt  GameTests.cpp
